.archive/kubernetes/apps/networking/ingresses/ingressRoutes/traefik/ingress-traefikCRD.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &name traefik
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: api@internal
          kind: TraefikService
          namespace: networking
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
